--- a/charts/apps/templates/applications.yaml
+++ b/charts/apps/templates/applications.yaml
@@ -6,6 +6,8 @@ kind: Application
 metadata:
   name: {{ $app }}-{{ $dest.name }}
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   project: {{ .project }} 
   source:
@@ -23,9 +25,8 @@ spec:
   syncPolicy:
     {{- if not .disableAutomated }}
     automated:
-      prune: false
+      prune: true
       selfHeal: true
-      allowEmpty: false
     {{- end }}
     retry:
       limit: 5
