adding project back to values files

--- a/charts/apps/values.yaml
+++ b/charts/apps/values.yaml
@@ -20,7 +20,7 @@ argocdApplications:
 
   kube-prometheus-stack:
     namespace: monitoring
-    # project: addons
+    project: addons
     # targetRevision: HEAD
     # helm: true
     # disableAutomated: false
