updating bootstrap helm syncPolicy
added addons-project.yaml for one bootstrap and fixed the copy in the versioning github workflow

--- a/argocd-bootstrap-app.helm.yaml
+++ b/argocd-bootstrap-app.helm.yaml
@@ -35,4 +35,7 @@ spec:
           valueFiles:
             - values-{{ .values.ring }}.yaml
       syncPolicy:
-        automated: {}
+        automated:
+          prune: true
+          selfHeal: true
+          allowEmpty: true
